--- a/Progressao/paginas/templates/paginas/modelo.html
+++ b/Progressao/paginas/templates/paginas/modelo.html
@@ -14,6 +14,7 @@
 
     <!-- Importar o Bootstrap -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
 
 </head>
 
@@ -23,7 +24,7 @@
 
         <!-- Menu -->
         {% block menu %}
-        <h4>Código do seu Menu</h4>
+        <h4> <i class="fa fa-address-book" aria-hidden="true"></i> Código do seu Menu</h4>
         <!-- Coloque dentro deste bloco todo o código do menu -->
         {% endblock %}
 
