Curso angular completo, falta arrumar public, enviado projeto de DDM também

--- a/cursoAngular/src/app/app.component.html
+++ b/cursoAngular/src/app/app.component.html
@@ -1,9 +1,12 @@
 <div class="container-fluid">
   <header>
     <nav class="navbar navbar-expand-md bg-info">
-      <a href="" class="nav-link text-white"> Opção 1</a>
-      <a href="" class="nav-link text-white"> Opção 2</a>
-      <a href="" class="nav-link text-white"> Opção 3</a>
+      <a href="" class="nav-link text-white" routerLink=''> Home</a>
+      <a href="" class="nav-link text-white" routerLink='sobre'> Sobre</a>
+      <a href="" class="nav-link text-white" routerLink='soma'> Soma</a>
+      <a href="" class="nav-link text-white" routerLink='vetores'> Vetores</a>
+
+      
     </nav>
   </header>
 
